--- a/config.yml
+++ b/config.yml
@@ -7,23 +7,23 @@ users:
   #单个用户配置
   - user:
       #username 学号或者工号
-      username: '161105024'
+      username: '201704126'
       #password 密码
-      password: '161105024'
+      password: '13581386337wzC'
       #address 地址，定位信息  中国河南省xx市xx区xx路
-      address: 中国河南省
+      address: 中国湖北省十堰市张湾区湖北汽车工业学院
       #email 接受通知消息的邮箱
-      email: 461009747@qq.com
+      email: 1437600468@qq.com
       #school 学校全称
-      school: 新乡医学院
+      school: 湖北汽车工业学院
       #lon 经度
-      lon: '114.639377'
+      lon: '110.742589'
       #lat 纬度
-      lat: '32.958833'
+      lat: '32.656417'
       #abnormalReason 反馈信息
-      abnormalReason: 在家
+      #abnormalReason: 在家
       #photo 签到照片，不需要可不填，或者直接删除
-      photo: default.png
+      #photo: default.png
   #多用户配置，将下面的注释去掉即可，如果有表单内容有图片，不建议使用多用户配置
 #今日校园相关配置
 cpdaily:
